--- a/src/app/main/scheduler/scheduler.component.html
+++ b/src/app/main/scheduler/scheduler.component.html
@@ -9,14 +9,14 @@
                 <img src="assets/images/logos/bi-logo.svg" class="p-16">
                 <div class="p-16">
                     <div class="h1">Welcome</div>
-                    <div class="h3">Please schedule a meeting</div>
-                    <!-- <div class="h4 secondary-text">today: {{today | date: 'yyyy-MM-dd'}}</div> -->
+                    <div class="h3">Please schedule a meeting</div>                  
                 </div>
                 <div class="p-16 pt-0 line-height-1.75" width="800">
                     <div fxFlex fxLayout="column" [formGroup]="scheduleForm">
                         <mat-form-field appearance="outline">
                             <mat-label>Appoinment Date</mat-label>
-                            <input matInput formControlName="date" [matDatepicker]="picker" placeholder="chose a date" required
+                            <input matInput formControlName="date" [matDatepicker]="picker"
+                             placeholder="chose a date" required
                                 [min]="today | date: 'yyyy-MM-dd'">
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker color="secondary"></mat-datepicker>
@@ -35,18 +35,12 @@
 
                         <mat-form-field appearance="outline">
                             <mat-label>Appoinment Time</mat-label>
-                            <input matInput formControlName="time" type="time" placeholder="chose a date"  required>                           
+                            <input matInput formControlName="time" value="01:30"
+                            type="time"  min="9:00" max="18:00"  step placeholder="chose a date" (keydown)="isNumberKey($event)" required>   
+                            <blockquote><p class="font-weight-100">Meeting hours are from 9am to 6pm</p></blockquote>                     
                         </mat-form-field>
+                        
 
-                        <!-- <mat-form-field appearance="outline">
-                            <mat-label>Time for metting</mat-label>
-                            <select formControlName="period" matNativeControl required>
-                                <option value="1 hour">1 hour</option>
-                                <option value="2 hour">2 hour</option>
-                                <option value="3 hour">3 hour</option>
-                                <option value="4 hour">4 hour</option>
-                            </select>
-                        </mat-form-field> -->
                         <mat-form-field appearance="outline">
                             <mat-label>Notes</mat-label>
                             <textarea formControlName="note" matInput placeholder="write your note" [rows]="5"
