--- a/src/app/main/scheduler/scheduler.component.html
+++ b/src/app/main/scheduler/scheduler.component.html
@@ -5,48 +5,69 @@
 
         <div fxFlex fxLayout="column" fxLayoutGap="12px" fxLayoutAlign="start center">
 
-            <div class="fuse-card" >
+            <div class="fuse-card">
                 <img src="assets/images/logos/bi-logo.svg" class="p-16">
                 <div class="p-16">
                     <div class="h1">Welcome</div>
-                    <div class="h3">Please schedule a meeting</div>                  
+                    <div class="h3">Please schedule a meeting</div>
                 </div>
                 <div class="p-16 pt-0 line-height-1.75" width="800">
-                    <div fxFlex fxLayout="column" [formGroup]="scheduleForm">
+                    <div fxFlex fxLayout="column" [formGroup]="form">
                         <mat-form-field appearance="outline">
                             <mat-label>Appoinment Date</mat-label>
-                            <input matInput formControlName="date" [matDatepicker]="picker"
-                             placeholder="chose a date" required
-                                [min]="today | date: 'yyyy-MM-dd'">
+                            <input matInput formControlName="date" [matDatepicker]="picker" placeholder="select a date"
+                                required [min]="today | date: 'yyyy-MM-dd'">
+                                <mat-error *ngIf="true">
+                                        A valid date is required!
+                                    </mat-error>
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker color="secondary"></mat-datepicker>
+                           
                         </mat-form-field>
-                        
+
 
                         <mat-form-field appearance="outline">
                             <mat-label>Meeting Type</mat-label>
-                            <input matInput  formControlName="type" style="display:none;" >
+                            <input matInput formControlName="type" style="display:none;" [(ngModel)]="call" required>
                             <mat-radio-group formControlName="type">
-                                <mat-radio-button class="secondary-text p-24" 
-                                 *ngFor="let item of callType" 
-                                 [value]="item" [checked]="item === 'call'" >{{item}}</mat-radio-button>
+                                <mat-radio-button class="secondary-text p-8" *ngFor="let item of callType" [value]="item">{{item}}</mat-radio-button>
                             </mat-radio-group>
                         </mat-form-field>
 
                         <mat-form-field appearance="outline">
                             <mat-label>Appoinment Time</mat-label>
-                            <input matInput formControlName="time" value="01:30"
-                            type="time"  min="9:00" max="18:00"  step placeholder="chose a date" (keydown)="isNumberKey($event)" required>   
-                            <blockquote><p class="font-weight-100">Meeting hours are from 9am to 6pm</p></blockquote>                     
+                            <input matInput formControlName="time" type="time" [(ngModel)]="time" step placeholder="chose a date" required>
+                            <blockquote>
+                                <p class="font-weight-100">Meeting hours are from 7 am to 6 pm EST</p>
+                            </blockquote>
                         </mat-form-field>
-                        
+
+                        <mat-form-field appearance="outline">
+                            <mat-label>Time Zone</mat-label>
+                            <mat-select formControlName="timezone" matNativeControl [(ngModel)]="selected" placeholder="Select time zone"
+                                required>
+                                <mat-option value="Eastern Time (EST)">Eastern Time (EST)</mat-option>
+                                <mat-option value="Central Time (CST)">Central Time (CST)</mat-option>
+                                <mat-option value="Mountain Time (MT)">Mountain Time (MT)</mat-option>
+                                <mat-option value="Pacific Time (PST)">Pacific Time (PST)</mat-option>
+                                <mat-option value="Western European Time (WET)">Western European Time (WET)</mat-option>
+                                <mat-option value="Central European Time (CET)">Central European Time (CET)</mat-option>
+                                <mat-option value="Eastern European Time (EET)">Eastern European Time (EET)</mat-option>
+                                <mat-option value="Japan Time (JPT)">Japan Time (JPT)</mat-option>
+                                <mat-option value="Korea Time (KST)">Korea Time (KST)</mat-option>
+                                <mat-option value="Brasilia Time (BRT)">Brasilia Time (BRT)</mat-option>
+                            </mat-select>
+                        </mat-form-field>
 
                         <mat-form-field appearance="outline">
                             <mat-label>Notes</mat-label>
-                            <textarea formControlName="note" matInput placeholder="write your note" [rows]="5"
-                                [matTextareaAutosize]="true"></textarea>
+                            <textarea  formControlName="note" matInput placeholder="write your note" [rows]="3"
+                                [matTextareaAutosize]="true" required></textarea>
+                                <mat-error *ngIf="true">
+                                        A note  is required!
+                                    </mat-error>
                         </mat-form-field>
-                        <button type="submit" (click)="onSubmit()"  [disabled]="!scheduleForm.valid">
+                        <button type="submit" (click)="onSubmit()">
                             Submit
                         </button>
                     </div>
@@ -55,8 +76,7 @@
             </div>
 
         </div>
-        
+
 
     </div>
 </div>
-
