--- a/src/app/main/scheduler/thank-you/thank-you.component.html
+++ b/src/app/main/scheduler/thank-you/thank-you.component.html
@@ -5,7 +5,7 @@
                 <img src="assets/images/logos/bi-logo-with-tagline.svg">
             </div>
             <div class="mat-display-1  secondary-text">Thank you!</div>
-            <div class="mat-subheading-1 secondary-text">Your appointment meeting is shceduled</div>
+            <div class="mat-subheading-1 secondary-text">Your appointment meeting is scheduled</div>
             <div class="register" fxLayout="column" fxLayoutAlign="center center">
                 <a class="link" [routerLink]="'scheduler'">go to scheduler?</a>
             </div>
